# pyTorch-sentiment-classifier

./: .dockerignore  Dockerfile  MODULE_STRUCTURE.md  README.md  README_MODEL.md  docker-compose.yml  pyproject.toml  requirements.txt
.continue/mcpServers/: fullstack-mcp.yaml
src/: main.py
src/backend/app/ml/: predictor.py
src/backend/app/routes/: analyze.py
src/backend/app/schemas/: request.py
src/backend/app/services/: advanced_service.py
src/frontend/: dashboard_ready.py
src/model/inference/: predictor.py
src/model/training/: train_lora.py
src/ollama/: client.py
src/rag/: faiss_index.py
src/streaming/: kafka_producer.py
